// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarField> should render component with custom extensions 1`] = `
<div>
  <div
    class="avatar-field"
  >
    <label
      class="avatar-field__content"
    >
      <input
        accept="image/*"
        class="file-input avatar-field__input"
        data-testid="file-input"
        name="file"
        title="Foto de perfil"
        type="file"
      />
      <div
        class="avatar-field__overlay"
      >
        <span
          class="icon"
          data-name="camera"
          data-testid="camera"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 8C3 8.55 3.45 9 4 9C4.55 9 5 8.55 5 8V6H7C7.55 6 8 5.55 8 5C8 4.45 7.55 4 7 4H5V2C5 1.45 4.55 1 4 1C3.45 1 3 1.45 3 2V4H1C0.45 4 0 4.45 0 5C0 5.55 0.45 6 1 6H3V8Z"
              fill="currentColor"
            />
            <circle
              cx="13"
              cy="14"
              fill="currentColor"
              r="3"
            />
            <path
              clip-rule="evenodd"
              d="M17.83 6H21C22.1 6 23 6.9 23 8V20C23 21.1 22.1 22 21 22H5C3.9 22 3 21.1 3 20V9.72C3.3 9.89 3.63 10 4 10C5.1 10 6 9.1 6 8V7H7C8.1 7 9 6.1 9 5C9 4.63 8.89 4.3 8.72 4H15.12C15.68 4 16.22 4.24 16.59 4.65L17.83 6ZM8 14C8 16.76 10.24 19 13 19C15.76 19 18 16.76 18 14C18 11.24 15.76 9 13 9C10.24 9 8 11.24 8 14Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="text text--size-sm"
        >
          Adicionar foto
        </p>
      </div>
    </label>
    <span
      class="caption avatar-field__caption"
      data-testid="avatar-field-caption"
    >
      Arquivos *.jpg, *.jpeg
      <br />
      Tamanho máximo 1 MB
    </span>
  </div>
</div>
`;

exports[`<AvatarField> should render component with custom max file size 1`] = `
<div>
  <div
    class="avatar-field"
  >
    <label
      class="avatar-field__content"
    >
      <input
        accept="image/*"
        class="file-input avatar-field__input"
        data-testid="file-input"
        name="file"
        title="Foto de perfil"
        type="file"
      />
      <div
        class="avatar-field__overlay"
      >
        <span
          class="icon"
          data-name="camera"
          data-testid="camera"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 8C3 8.55 3.45 9 4 9C4.55 9 5 8.55 5 8V6H7C7.55 6 8 5.55 8 5C8 4.45 7.55 4 7 4H5V2C5 1.45 4.55 1 4 1C3.45 1 3 1.45 3 2V4H1C0.45 4 0 4.45 0 5C0 5.55 0.45 6 1 6H3V8Z"
              fill="currentColor"
            />
            <circle
              cx="13"
              cy="14"
              fill="currentColor"
              r="3"
            />
            <path
              clip-rule="evenodd"
              d="M17.83 6H21C22.1 6 23 6.9 23 8V20C23 21.1 22.1 22 21 22H5C3.9 22 3 21.1 3 20V9.72C3.3 9.89 3.63 10 4 10C5.1 10 6 9.1 6 8V7H7C8.1 7 9 6.1 9 5C9 4.63 8.89 4.3 8.72 4H15.12C15.68 4 16.22 4.24 16.59 4.65L17.83 6ZM8 14C8 16.76 10.24 19 13 19C15.76 19 18 16.76 18 14C18 11.24 15.76 9 13 9C10.24 9 8 11.24 8 14Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="text text--size-sm"
        >
          Adicionar foto
        </p>
      </div>
    </label>
    <span
      class="caption avatar-field__caption"
      data-testid="avatar-field-caption"
    >
      Arquivos *.jpg, *.jpeg, *.png
      <br />
      Tamanho máximo 10 MB
    </span>
  </div>
</div>
`;

exports[`<AvatarField> should render component with default props 1`] = `
<div>
  <div
    class="avatar-field"
  >
    <label
      class="avatar-field__content"
    >
      <input
        accept="image/*"
        class="file-input avatar-field__input"
        data-testid="file-input"
        name="file"
        title="Foto de perfil"
        type="file"
      />
      <div
        class="avatar-field__overlay"
      >
        <span
          class="icon"
          data-name="camera"
          data-testid="camera"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 8C3 8.55 3.45 9 4 9C4.55 9 5 8.55 5 8V6H7C7.55 6 8 5.55 8 5C8 4.45 7.55 4 7 4H5V2C5 1.45 4.55 1 4 1C3.45 1 3 1.45 3 2V4H1C0.45 4 0 4.45 0 5C0 5.55 0.45 6 1 6H3V8Z"
              fill="currentColor"
            />
            <circle
              cx="13"
              cy="14"
              fill="currentColor"
              r="3"
            />
            <path
              clip-rule="evenodd"
              d="M17.83 6H21C22.1 6 23 6.9 23 8V20C23 21.1 22.1 22 21 22H5C3.9 22 3 21.1 3 20V9.72C3.3 9.89 3.63 10 4 10C5.1 10 6 9.1 6 8V7H7C8.1 7 9 6.1 9 5C9 4.63 8.89 4.3 8.72 4H15.12C15.68 4 16.22 4.24 16.59 4.65L17.83 6ZM8 14C8 16.76 10.24 19 13 19C15.76 19 18 16.76 18 14C18 11.24 15.76 9 13 9C10.24 9 8 11.24 8 14Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="text text--size-sm"
        >
          Adicionar foto
        </p>
      </div>
    </label>
    <span
      class="caption avatar-field__caption"
      data-testid="avatar-field-caption"
    >
      Arquivos *.jpg, *.jpeg, *.png
      <br />
      Tamanho máximo 1 MB
    </span>
  </div>
</div>
`;
